--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,12 @@ body {
 }
 
 /* Header Style */
-.container{
+.container {
     width: 75%;
     margin: 0 auto;
+}
+
+header{
     text-align: center;
 }
 
@@ -28,8 +31,8 @@ header > h1{
 /* Main Style */
 .row{
     content: "";
-    clear: both;
     display: block; /*PERCHé NON FUNZIONA CON display TABLE?*/
+    clear: both;
     padding-top: 10px;
     padding-bottom: 50px;
 }
@@ -45,5 +48,12 @@ header > h1{
 #image{
     width: 150px;
     float: left;
+}
+
+.text_card{
+    float:none;
+    color: aliceblue;
+    padding-top: 20px;
+    
 }
 
