--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 :root {
-    font: 12px;
+    /* font: 12px; */
     font-family: 'Roboto', Verdana, Tahoma, sans-serif;
     font-weight: bold;
 }
@@ -48,12 +48,26 @@ header > h1{
 #image{
     width: 150px;
     float: left;
+    padding-right: 20px;
+    clear: both;
 }
 
 .text_card{
     float:none;
     color: aliceblue;
     padding-top: 20px;
-    
+}
+
+.text_card div{
+    padding: 10px;
+}
+
+.text_card :nth-child(2){
+    font-weight: 200;
+}
+
+.text_card :nth-child(3){
+    font-size: 12px;
+    color: rgb(0, 110, 255);
 }
 
