--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 /* CSS RESET */
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300&display=swap');
 
 :root {
-    font-family: 'Roboto', Verdana, Tahoma, sans-serif;
+    font-family: 'Fredoka', Verdana, Tahoma, sans-serif;
     font-weight: bold;
 }
 
@@ -18,25 +18,26 @@ body {
     margin: 0 auto;
 }
 
-header{
+header {
     text-align: center;
 }
 
-header > h1{
+header>h1 {
     margin-bottom: 50px;
     color: purple;
 }
 
 /* Main Style */
-.row{
+.row {
     content: "";
-    display: block; /*PERCHé NON FUNZIONA CON display TABLE?*/
+    display: block;
+    /*PERCHé NON FUNZIONA CON display TABLE?*/
     clear: both;
     padding-top: 10px;
     padding-bottom: 50px;
 }
 
-.col{
+.col {
     float: left;
     width: calc((100% / 3) - 20px);
     margin: 0 10px;
@@ -44,33 +45,32 @@ header > h1{
     background-color: black;
 }
 
-#image{
+#image {
     width: 135px;
     float: left;
     padding-right: 20px;
     clear: both;
 }
 
-.text_card{
-    float:none;
+.text_card {
+    float: none;
     color: aliceblue;
     padding-top: 20px;
 }
 
-.text_card div{
+.text_card div {
     padding: 10px;
 }
 
-.text_card :nth-child(2){
+.text_card :nth-child(2) {
     font-weight: 200;
 }
 
-.text_card :nth-child(3){
+.text_card :nth-child(3) {
     font-size: 12px;
     color: rgb(0, 110, 255);
 }
 
-.shadow{
+.shadow {
     box-shadow: 1px 5px 10px;
 }
-
