--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ header>h1 {
 .row {
     content: "";
     display: block;
-    /*PERCHé NON FUNZIONA CON display TABLE?*/
+    /*PERCHé NON FUNZIONA CON display TABLE????????*/
     clear: both;
     padding-top: 10px;
     padding-bottom: 50px;
@@ -41,7 +41,7 @@ header>h1 {
     float: left;
     width: calc((100% / 3) - 20px);
     margin: 0 10px;
-    /* padding: 0 10px; PERCHè non posso usare padding?*/
+    /* padding: 0 10px; PERCHè non posso usare padding??????????*/
     background-color: black;
 }
 
